# cpp-vision-project

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
cmake/: ConfigModules.cmake
include/core/: detectors.hpp  effects.hpp  image_loader.hpp  image_processor.hpp
src/: main.cpp
src/core/: detectors.cpp  effects.cpp  image_loader.cpp  image_processor.cpp
